# rust-distributed-file-storage-system

./: .gitignore  Cargo.toml  LICENSE  README.md
src/chunkserver/: chunkserver.rs  main.rs  mod.rs
src/client/: main.rs
src/common/: messages.rs  mod.rs
src/common/server/: certificate_provider.rs  mod.rs  server.rs
src/metadataserver/: main.rs  metadataserver.rs  mod.rs
storage-core/: Cargo.toml
storage-core/src/: lib.rs
storage-core/src/chunkserver/: chunk.rs  chunkserver.rs  config.rs  external_chunkserver.rs  internal_chunkserver.rs  main.rs  mod.rs  setup.rs  types.rs
storage-core/src/chunkserver/internal/: chunkserver_definition.rs  chunkserver_impl.rs  definition.rs  impl.rs  mod.rs  server_impl.rs
storage-core/src/client/: chunk_send.rs  client.rs  commands.rs  config.rs  main.rs  setup.rs  types.rs
storage-core/src/common/: chunk_send.rs  config.rs  dbg_println.rs  message_payload.rs  messages.rs  mod.rs  types.rs
storage-core/src/common/messages/: chunk_transfer.rs  message_payloads.rs  messages.rs  mod.rs  payload.rs
storage-core/src/common/server/: certificate_provider.rs  mod.rs  server.rs
storage-core/src/metadataserver/: config.rs  main.rs  metadataserver.rs  mod.rs  placement_strategy.rs  setup.rs  types.rs
storage-core/src/metadataserver/internal/: definition.rs  impl.rs  mod.rs  server_impl.rs
storage-macros/: Cargo.toml
storage-macros/src/: lib.rs
storage-macros/tests/: integration.rs
