[package]
name = "storage-core"
authors = ['Bartosz Niedzwiedz']
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2.5"
url = "2.5.7"
rcgen = "0.14.5"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3"
bytes = "1.11.0"
storage-macros = { path = "../storage-macros" }
moka = { version = "0.12.11", features = ["future"] }
rand = "0.9.2"
scc = "3.4.6"
arc-swap = "1.7"

[lib]
name = "storage_core"
path = "src/lib.rs"

[[bin]]
name="chunkserver"
path = "src/chunkserver/main.rs"

[[bin]]
name="metadataserver"
path = "src/metadataserver/main.rs"

[[bin]]
name="client"
path = "src/client/main.rs"
